--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem vindo ao quiz do SENAI</title>
+    <title>Sistema de Gerenciamento Bella Pizza</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <h2>Bem vindo ao quiz do SENAI</h2>
-        <a href="cadastroProduto.html" class="btn btn-default" >Cadastrar Produtos</a>
-        <a href="quiz.html" class="btn btn-default" >Realizar Pedidos</a>
+        <center><h1>Bela Pizza</h1></center>
+        <a href="cadastroProduto.html" class="btn btn-primary btn-lg btn-block" >Cadastrar Produtos</a>
+        <a href="pedidos.html" class="btn btn-primary btn-lg btn-block" >Ver Pedidos</a>
+        <a href="pedido.html" class="btn btn-primary btn-lg btn-block" >Realizar Pedidos</a>
     </div>
 </body>
 </html>
